# ssm-ps-template

./: .gitignore  LICENSE.txt  README.md  bootstrap  docker-compose.yml  pyproject.toml  test.toml
.github/workflows/: deploy.yaml  testing.yaml
ssm_ps_template/: __init__.py  __main__.py  config.py  discover.py  discovery.py  render.py  ssm.py
tests/: test_config.py  test_discover.py  test_discovery.py  test_main.py  test_render.py  test_ssm.py  utils.py
tests/config/: case1.json  case1.toml  case1.yaml  case2a.yaml  case2c.yaml  case2d.ini  case2d.yaml
tests/data/config/: case1.json  case1.toml  case1.yaml  case1a.tmpl  case1b.tmpl  case2a.yaml  case2b.yaml  case2d.ini  case2d.yaml
tests/data/discovery/: expectations.yaml  template.yaml.j2
tests/data/main/: config.toml  data.yaml  expectation.yaml  test.yaml.j2
tests/data/render/: expectation.yaml  template.yaml.j2  values.yaml
tests/expectations/: case1a.out  case1b.out
tests/templates/: case1a.tmpl  case2.tmpl
